<resources>
    <string name="app_name">Pizza Maker</string>
    <string name="specialty_pizzas">Specialty Pizzas</string>
    <string name="build_your_own">Build Your Own</string>
    <string name="current_order">Current Order</string>
    <string name="store_orders">Store Orders</string>
    <string name="sm">Small</string>
    <string name="md">Medium</string>
    <string name="lg">Large</string>
    <string name="amount">Amount:</string>
    <string name="add">Add to Order</string>
    <string name="extra_sauce">Extra Sauce</string>
    <string name="extra_cheese">Extra Cheese</string>
    <string name="order_total">Order Total: $</string>
    <string name="sales_tax">Sales Tax: $</string>
    <string name="subtotal">Subtotal: $</string>
    <string name="order_number">Order Number:</string>
    <string name="remove_pizza">Remove Pizza</string>
    <string name="add_to_order">Add to Order</string>
    <string name="build_your_own_pizza">Build Your Own Pizza</string>
    <string name="tomato_sauce">Tomato Sauce</string>
    <string name="alfredo_sauce">Alfredo Sauce</string>
    <string name="size">Size:</string>
    <string name="price">Price: $</string>
    <string name="add_toppings">Additional Toppings:</string>
    <string name="sel_toppings">Selected Toppings:</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="add_to_store_orders">Add to Store Orders</string>
    <string-array name="sizes">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string-array name="pizzaNames">
        <item>Deluxe</item>
        <item>Meatzza</item>
        <item>Mediterranean</item>
        <item>MightyHarvest</item>
        <item>Pepperoni</item>
        <item>SavoryFusion</item>
        <item>Seafood</item>
        <item>SizzlingDelight</item>
        <item>Supreme</item>
        <item>VeggieFiesta</item>
    </string-array>
</resources>