<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/pizzaImage"
        android:layout_width="158dp"
        android:layout_height="191dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/buildyourown" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="39dp"
        android:layout_height="27dp"
        android:layout_marginStart="204dp"
        android:layout_marginTop="68dp"
        android:text="@string/size"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/additionalToppingsList"
        android:layout_width="119dp"
        android:layout_height="228dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="268dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addToppingButton"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="316dp"
        android:text="Add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/removeToppingButton"
        android:layout_width="116dp"
        android:layout_height="43dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="412dp"
        android:text="Remove"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/selectedToppingsList"
        android:layout_width="125dp"
        android:layout_height="226dp"
        android:layout_marginStart="272dp"
        android:layout_marginTop="268dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/priceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="576dp"
        android:text="@string/price"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/priceTextField"
        android:layout_width="96dp"
        android:layout_height="31dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="584dp"
        android:editable="false"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addToOrderButton"
        android:layout_width="176dp"
        android:layout_height="43dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="572dp"
        android:text="Add to Order"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/pizzaSizeSpinner"
        android:layout_width="147dp"
        android:layout_height="28dp"
        android:layout_marginStart="244dp"
        android:layout_marginTop="68dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/buildYourOwnText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="16dp"
        android:text="@string/build_your_own_pizza"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/tomatoSauceButton"
        android:layout_width="145dp"
        android:layout_height="27dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="104dp"
        android:text="@string/tomato_sauce"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/alfredoSauceButton"
        android:layout_width="142dp"
        android:layout_height="29dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="136dp"
        android:text="@string/alfredo_sauce"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/extraCheeseCheckBox"
        android:layout_width="144dp"
        android:layout_height="26dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="172dp"
        android:text="@string/extra_cheese"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/extraSauceCheckBox"
        android:layout_width="142dp"
        android:layout_height="30dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="204dp"
        android:text="@string/extra_sauce"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
