<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rowLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="391dp"
        android:layout_height="400dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/im_pizzaImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/txt_pizzaName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="16dp"
                android:text="Pizza Name"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/im_pizzaImage"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_add"
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ListView
                android:id="@+id/list_toppings"
                android:layout_width="207dp"
                android:layout_height="237dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/txt_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="64dp"
                android:layout_marginBottom="12dp"
                android:text="$0.00"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/btn_add"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.chip.ChipGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toEndOf="@+id/im_pizzaImage"
                app:layout_constraintTop_toBottomOf="@+id/txt_pizzaName"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_sm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/sm" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_md"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/md" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_lg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lg" />
            </com.google.android.material.chip.ChipGroup>

            <CheckBox
                android:id="@+id/check_sauce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="44dp"
                android:text="@string/extra_sauce"
                app:layout_constraintBottom_toTopOf="@+id/check_cheese"
                app:layout_constraintEnd_toEndOf="parent" />

            <CheckBox
                android:id="@+id/check_cheese"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="36dp"
                android:layout_marginBottom="40dp"
                android:text="@string/extra_cheese"
                app:layout_constraintBottom_toTopOf="@+id/txt_price"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>