<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StoreOrderActivity">

    <TextView
        android:id="@+id/storeOrdersText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="32dp"
        android:text="@string/store_orders"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/orderTotal"
        android:layout_width="113dp"
        android:layout_height="20dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:text="@string/order_total"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderNoText" />

    <TextView
        android:id="@+id/orderTotalVal"
        android:layout_width="120dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:text=""
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/orderTotal"
        app:layout_constraintTop_toBottomOf="@+id/orderNoSpinner" />

    <Spinner
        android:id="@+id/orderNoSpinner"
        android:layout_width="120dp"
        android:layout_height="25dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/orderNoText"
        app:layout_constraintTop_toBottomOf="@+id/storeOrdersText" />

    <TextView
        android:id="@+id/orderNoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="20dp"
        android:text="@string/order_number"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storeOrdersText" />

    <ListView
        android:id="@+id/listOrderPizzas"
        android:layout_width="match_parent"
        android:layout_height="445dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="33dp"
        app:layout_constraintBottom_toTopOf="@+id/cancelOrderButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderTotal"
        app:layout_constraintVertical_bias="0.01" />

    <Button
        android:id="@+id/cancelOrderButton"
        android:layout_width="238dp"
        android:layout_height="88dp"
        android:layout_marginStart="84dp"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="52dp"
        android:text="@string/cancel_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>