<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrentOrderActivity"
    tools:layout_editor_absoluteX="37dp"
    tools:layout_editor_absoluteY="-36dp">

    <TextView
        android:id="@+id/orderNum"
        android:layout_width="37dp"
        android:layout_height="36dp"
        android:layout_marginTop="32dp"
        android:text=""
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/orderNoText"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/orderNoText"
        android:layout_width="166dp"
        android:layout_height="36dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="32dp"
        android:text="@string/order_number"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/subtotalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginBottom="13dp"
        android:text="@string/subtotal"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/salesTaxText"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/salesTaxText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginBottom="14dp"
        android:text="@string/sales_tax"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/orderTotalText"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/subtotalValue"
        android:layout_width="56dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="13dp"
        android:text=""
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/salesTaxText"
        app:layout_constraintStart_toEndOf="@+id/subtotalText"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/salesTaxValue"
        android:layout_width="60dp"
        android:layout_height="24dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="14dp"
        android:text=""
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/orderTotalValue"
        app:layout_constraintStart_toEndOf="@+id/salesTaxText"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/orderTotalValue"
        android:layout_width="56dp"
        android:layout_height="24dp"
        android:layout_marginStart="7dp"
        android:layout_marginBottom="52dp"
        android:text=""
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/orderTotalText"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/addOrderButton"
        android:layout_width="157dp"
        android:layout_height="81dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="60dp"
        android:text="@string/add_to_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/orderTotalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginBottom="52dp"
        android:text="@string/order_total"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <ListView
        android:id="@+id/listPizzas"
        android:layout_width="match_parent"
        android:layout_height="445dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderNum" />


</androidx.constraintlayout.widget.ConstraintLayout>