<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/imbtn_buildyourown"
        android:layout_width="179dp"
        android:layout_height="149dp"
        android:layout_marginTop="20dp"
        android:onClick="openBuildYourOwnPizza"
        android:scaleType="fitStart"
        android:text="@string/build_your_own"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.818"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/im_specialtypizzas"
        app:srcCompat="@drawable/buildyourown" />

    <ImageButton
        android:id="@+id/imbtn_currentorder"
        android:layout_width="178dp"
        android:layout_height="136dp"
        android:layout_marginTop="16dp"
        android:onClick="openCurrentOrder"
        android:scaleType="fitStart"
        android:text="@string/current_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.822"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imbtn_buildyourown"
        app:srcCompat="@drawable/currentorder" />

    <ImageButton
        android:id="@+id/imbtn_storeorder"
        android:layout_width="177dp"
        android:layout_height="142dp"
        android:onClick="openStoreOrders"
        android:scaleType="fitStart"
        android:text="@string/store_orders"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.822"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imbtn_currentorder"
        app:layout_constraintVertical_bias="0.371"
        app:srcCompat="@drawable/storeorders" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:text="@string/specialty_pizzas"
        app:layout_constraintEnd_toStartOf="@+id/im_specialtypizzas"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/im_specialtypizzas"
        android:layout_width="177dp"
        android:layout_height="170dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="44dp"
        android:onClick="openSpecialtyPizza"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/specialtypizzas" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="98dp"
        android:layout_height="21dp"
        android:layout_marginTop="280dp"
        android:text="@string/build_your_own"
        app:layout_constraintEnd_toStartOf="@+id/im_specialtypizzas"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="440dp"
        android:text="@string/current_order"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="604dp"
        android:text="@string/store_orders"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>